View Issue Details

IDProjectCategoryView StatusLast Update
0022975Open CASCADEOCCT:Application Frameworkpublic2012-03-29 17:26
Reportervro Assigned Tobugmaster  
PrioritylowSeveritytext 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2005 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022975: Help for a draw-command ImportShape is incorrect.
DescriptionThe draw-command prints a wrong help skipping the entry of the label.
Steps To Reproduce>help ImportShape
>ImportShape Doc Shape [Name]
TagsNo tags attached.
Test case numbertest case is not required

Activities

vro

2012-02-03 12:30

developer   ~0019374

Dear Sergey,
Review please the fix. It is located in 22975 branch, DNaming_BasicCommands.cxx.
Just a help on a draw-command "ImportShape" is corrected.
Thanks,
Vlad

szy

2012-02-16 11:23

manager   ~0019591

Reviewed.
It may be tested.

aan

2012-02-17 15:39

developer   ~0019630

Last edited: 2012-02-17 15:39

Dear BugMaster,
Workbench aan-22975-occt was created from SVN branch http://svn/svn/occt/branches/22975
(and aan-22975-products from trunk) and compiled on Linux and Windows platform.

There are not regressions in aan-22975-products regarding to KAS:dev:products-20120127-opt

See results in /QADisk/occttests/results/KAS/dev/aan-22975-products_16022012/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20120127-opt_28012012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-02-17 16:32

administrator   ~0019641

Integrated into trunk of occt repository

Date: 2012-02-17 16:31:00 +0400 (Fri, 17 Feb 2012)
New Revision: 10513

Modified:
   trunk/src/DNaming/DNaming_BasicCommands.cxx

Related Changesets

occt: master 85b70a3b

2012-02-17 12:31:00

vro


Committer: bugmaster Details Diff
0022975: Help for a draw-command ImportShape is incorrect. Affected Issues
0022975
mod - src/DNaming/DNaming_BasicCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2012-02-03 12:14 vro New Issue
2012-02-03 12:14 vro Assigned To => vro
2012-02-03 12:30 vro Note Added: 0019374
2012-02-03 12:30 vro Assigned To vro => szy
2012-02-03 12:30 vro Status new => resolved
2012-02-16 11:23 szy Note Added: 0019591
2012-02-16 11:23 szy Status resolved => reviewed
2012-02-16 11:32 mkv Assigned To szy => aan
2012-02-17 13:51 aan Test case number => test case is not required
2012-02-17 15:39 aan Note Added: 0019630
2012-02-17 15:39 aan Note Edited: 0019630
2012-02-17 15:40 aan Status reviewed => tested
2012-02-17 16:32 bugmaster Note Added: 0019641
2012-02-17 16:32 bugmaster Status tested => verified
2012-02-17 16:32 bugmaster Resolution open => fixed
2012-02-17 16:32 bugmaster Assigned To aan => vro
2012-03-14 12:32 bugmaster Project Internal => Open CASCADE
2012-03-29 17:26 bugmaster Changeset attached => occt master 85b70a3b