0022975: Help for a draw-command ImportShape is incorrect.